sail (4.0.1-19) UNRELEASED; urgency=low
  * tagged as 4.0.1-19
  - fix to database structure

 -- CoCoSoft <admin@aelintra.com>  Mon, 13 Apr 2015 18:00:00 +0000

sail (4.0.1-18) UNRELEASED; urgency=low
  * tagged as 4.0.1-18
  - add sarkdiscover
  - add sarkconference
  - add timers for tenants
  - message change on sarknet reboot
  - sarkpci bugfix to tabs
  - sarktrunk fix to handle unmonitored trunks
  - srkhelper enhance for meetme table
  - srkPageclass bug fix
  - diskabs bugfix for potential loop
  - setip now allows multiple local networks
  - sarkhelper now permanently logs
  - USB automount with autodump of IP
  - require ipcalc in dependencies

 -- CoCoSoft <admin@aelintra.com>  Sun, 12 Apr 2015 18:00:00 +0000

sail (4.0.1-17) UNRELEASED; urgency=low
  * tagged as 4.0.1-17
  - fix bad regex in sarktimer/update.php
 -- CoCoSoft <admin@aelintra.com>  Tue, 30 Sep 2014 18:00:00 +0000

sail (4.0.1-16) UNRELEASED; urgency=low
  * tagged as 4.0.1-15
  - fixed device deletion bug in the db updater
  - added new deleter for old 3.x/4.x devices
 -- CoCoSoft <admin@aelintra.com>  Mon, 18 Aug 2014 18:00:00 +0000

sail (4.0.1-15) UNRELEASED; urgency=low
  * tagged as 4.0.1-15
  - fixed sequence bug in the db updater (srkV4reloader.sh)
 -- CoCoSoft <admin@aelintra.com>  Sun, 17 Aug 2014 18:00:00 +0000

sail (4.0.1-14) UNRELEASED; urgency=low
  * tagged as 4.0.1-14
  - dropped commit sha logging in favour of tags
  - fix timezone bug in yealink.common
  - add ldapbase generation to provisioning
 -- CoCoSoft <admin@aelintra.com>  Sat, 16 Aug 2014 18:00:00 +0000

sail (4.0.1-13) UNRELEASED; urgency=low
  * git commit 9ed9a91a06a63b4af7cdc526366949d227648489
  - add initial user and cluster rows to initdata.sql
 -- CoCoSoft <admin@aelintra.com>  Thu, 14 Aug 2014 18:00:00 +0000

sail (4.0.1-12) UNRELEASED; urgency=low
  * svn commit 2243
  - Clean up sarkddi/view.php
  - fix bug in stop/start routine (Globals)
  - add network reboot message to network/view.php