@@ -353,7 +353,7 @@ Class page {
 		
 		$helper = new helper;
 		$conferences = array();
-		$handle = fopen("/etc/asterisk/meetme.conf", "r") or die('Could not read file!');
+		$handle = fopen("/etc/asterisk/sark_meetme.conf", "r") or die('Could not read file!');
 // get conference room list
 		while (!feof($handle)) {		
 			$row = trim(fgets($handle));		
